2005-02-19  KATO Kazuyoshi  <kzys@8-p.info>

	* extconf.rb: extconf.rb don't require glib2.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. Support MSVC++.
	compile to set GTK_BASEPATH as the environment variable.
	* sample/rose.rb, testlibart2.rb: Work on mswin32/mingw.

2005-01-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_affine.c: Works for gcc-4.0(Make artAffine as 
	global variable). Reported by Debian Bug Tracking System 
	#289710. Pointed out by Dafydd Harries.

2004-11-14 Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart.c: Fix compiling problem under ruby-1.6.x. 

2004-11-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_canvas.c: Support Object.allocate.
	Rename Art::Canvas::Color.new to Art::Canvas.color.
	* src/rbart_vpathdash.c: Separate from rbart_vpath.c
	Rename Art::Vpath::Dash to Art::VpathDash. Support Object.allocate.
	* src/rbart_bpath.c, rbart_vpath.c: Support Object.allocate. 

2004-11-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart.c, rbart.h, src/rbart_affine.c: Support Object.allocate.

2004-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/depend: Added.

2004-10-18  Vincent Isambart  <isambart@netcourrier.com>

	* extconf.rb: Exit with error code 1 after failure
	and replace tabs with spaces.

2004-03-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Check png.h and jpeglib.h.
	* README: Modified.

2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: remove nasty hack by using Dir.entries.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Exit with 1 when the package is not found.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-03-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbart_svp.c (vpath_to_svp): Remove the function.

2003-03-19  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/libart2.def: Add a file.

2003-02-19  Masao Mutoh  <mutoh@highway.ne.jp>
